Fixed Nav Brand Spacing

--- a/app/assets/stylesheets/ideas_style.css
+++ b/app/assets/stylesheets/ideas_style.css
@@ -11,7 +11,7 @@ body {
 	padding-bottom: 20px;
 }
 .navFix{
-	margin-left: 20px;
+	margin-left: 30px;
 }
 .card-body{
 	padding-left: 20px;
